<resources>
    <string name="app_name">Family Map</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="email">Email:</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="relativesTitle">"FAMILY"</string>
    <string name="eventTitle">"LIFE EVENTS"</string>
    <string name="map_intro">Click a Node For Details</string>
    <string name="family">Events</string>
    <string name="familyRelation">EventType</string>
    <string name="event">Events</string>
    <string name="eventType">EventType</string>
    <string name ="settings">Settings</string>
    <string name ="search">Search</string>
</resources>