<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:id="@+id/loginFragment"
        android:stretchColumns="3"
        tools:context=".MainActivity">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/serverHost" />

            <EditText
                android:id="@+id/serverHostField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="textShortMessage" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/serverPort" />

            <EditText
                android:id="@+id/serverPortField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="number" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/username" />

            <EditText
                android:id="@+id/usernameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="textShortMessage" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="textShortMessage"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/firstname" />

            <EditText
                android:id="@+id/firstNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/lastname" />

            <EditText
                android:id="@+id/lastNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/email" />

            <EditText
                android:id="@+id/emailField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="textEmailAddress" />
        </TableRow>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/genderMaleField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genderMale" />
            <RadioButton
                android:id="@+id/genderFemaleField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genderFemale"/>

        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/register" />
    </TableLayout>
</ScrollView>